[gd_scene load_steps=2 format=3 uid="uid://85r7lh86rmqg"]

[ext_resource type="Script" path="res://Scripts/Lobby.gd" id="1_k8gn4"]

[node name="HostedLobby" type="Node2D"]
script = ExtResource("1_k8gn4")

[node name="PlayerList" type="Node2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerList"]
offset_left = 497.0
offset_top = 181.0
offset_right = 595.0
offset_bottom = 277.0

[node name="GoBackButton" type="Button" parent="."]
offset_left = 412.0
offset_top = 458.0
offset_right = 702.0
offset_bottom = 562.0
theme_override_font_sizes/font_size = 64
text = "Go Back"

[connection signal="button_down" from="GoBackButton" to="." method="_on_go_back_button_down"]
